# My_repository_bot

./: .gitignore  Dockerfile  README.md  address_book.json  base.py  bot.py  pyproject.toml  setup.py
bot_helper/: README.md  bot.py
bot_helper/bot_helper/: address.py  address_book.py  birthday.py  email_address.py  field.py  name.py  note.py  phone.py  record.py  sort_files.py
bot_helper/bot_helper/notes/: note_book.py  notes_data_strcture.py
bot_helper/bot_helper/save_data/: save_on_disk.py
bot_helper/bot_helper/utils/: command_prompts.py  format_str.py
bot_helper/my_bot/: pyproject.toml
src/: address.py  address_book.py  birthday.py  email_address.py  name.py  phone.py  record.py  sort_files.py
src/save_data/: save_base.py  save_on_disk.py
src/utils/: format_str.py
